Improve contrast on issue cards

--- a/src/components/StatusChecker/styles/StatusTable.module.less
+++ b/src/components/StatusChecker/styles/StatusTable.module.less
@@ -9,6 +9,8 @@
 
   transition: all 0.2s ease-out;
 
+  background: #fff;
+
   &[data-severity='-1'] {
     opacity: 0.5;
 
